Refactoring: DDD (#19)
* refact: done project structure refactoring

* chore: updated workflows

* chore: added tests

* chore: changed format string for errors

* chore: created common domain core

* fix: fixed tests after all changes

* fix: fixed lint warnings

* chore: added golangci linter config

* chore: updated pr ci

* fix: updated pr ci of github actions

* chore: added rmq config definition for docker compose testing

* fix: fixed tests after all changes

* fix: fixed tests after all changes
