# docs/swagger.json
@@ -1,11 +1,108 @@
 {
     "swagger": "2.0",
     "info": {
-        "contact": {}
+        "description": "Watchtower is a project designed to provide processing files created into cloud by events.",
+        "title": "Watchtower service",
+        "contact": {},
+        "version": "0.0.1"
     },
     "paths": {
+        "/tasks/all": {
+            "post": {
+                "description": "Get all processing documents",
+                "consumes": [
+                    "application/json"
+                ],
+                "tags": [
+                    "tasks"
+                ],
+                "summary": "Get all processing documents",
+                "operationId": "get-processing-documents",
+                "parameters": [
+                    {
+                        "description": "File names to fetch processing status",
+                        "name": "jsonQuery",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/httpserver.FetchAllDocuments"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Ok",
+                        "schema": {
+                            "$ref": "#/definitions/httpserver.ResponseForm"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request message",
+                        "schema": {
+                            "$ref": "#/definitions/httpserver.BadRequestForm"
+                        }
+                    },
+                    "503": {
+                        "description": "Server does not available",
+                        "schema": {
+                            "$ref": "#/definitions/httpserver.ServerErrorForm"
+                        }
+                    }
+                }
+            }
+        },
+        "/tasks/fetch": {
+            "post": {
+                "description": "Load processing/unrecognized/done documents by names list",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "tasks"
+                ],
+                "summary": "Fetch processing documents",
+                "operationId": "fetch-documents",
+                "parameters": [
+                    {
+                        "description": "File names to fetch processing status",
+                        "name": "jsonQuery",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/httpserver.FetchDocumentsList"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Ok",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/dto.TaskEvent"
+                            }
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request message",
+                        "schema": {
+                            "$ref": "#/definitions/httpserver.BadRequestForm"
+                        }
+                    },
+                    "503": {
+                        "description": "Server does not available",
+                        "schema": {
+                            "$ref": "#/definitions/httpserver.ServerErrorForm"
+                        }
+                    }
+                }
+            }
+        },
         "/watcher/attach": {
-            "put": {
+            "post": {
                 "description": "Attach new directory to watcher",
                 "consumes": [
                     "application/json"
@@ -25,7 +122,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/httpserv.AttachDirectoryForm"
+                            "$ref": "#/definitions/httpserver.AttachDirectoryForm"
                         }
                     }
                 ],
@@ -33,182 +130,25 @@
                     "200": {
                         "description": "Ok",
                         "schema": {
-                            "$ref": "#/definitions/httpserv.ResponseForm"
+                            "$ref": "#/definitions/httpserver.ResponseForm"
                         }
                     },
                     "400": {
                         "description": "Bad Request message",
                         "schema": {
-                            "$ref": "#/definitions/httpserv.BadRequestForm"
+                            "$ref": "#/definitions/httpserver.BadRequestForm"
                         }
                     },
                     "503": {
                         "description": "Server does not available",
                         "schema": {
-                            "$ref": "#/definitions/httpserv.ServerErrorForm"
+                            "$ref": "#/definitions/httpserver.ServerErrorForm"
                         }
                     }
                 }
             }
         },
-        "/watcher/processing/clean": {
-            "post": {
-                "description": "Clean processing documents",
-                "consumes": [
-                    "application/json"
-                ],
-                "tags": [
-                    "watcher"
-                ],
-                "summary": "Clean processing documents",
-                "operationId": "clean-documents",
-                "parameters": [
-                    {
-                        "description": "File names to clean processing status",
-                        "name": "jsonQuery",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/httpserv.FetchDocumentsList"
-                        }
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "Ok",
-                        "schema": {
-                            "$ref": "#/definitions/httpserv.ResponseForm"
-                        }
-                    },
-                    "400": {
-                        "description": "Bad Request message",
-                        "schema": {
-                            "$ref": "#/definitions/httpserv.BadRequestForm"
-                        }
-                    },
-                    "503": {
-                        "description": "Server does not available",
-                        "schema": {
-                            "$ref": "#/definitions/httpserv.ServerErrorForm"
-                        }
-                    }
-                }
-            }
-        },
-        "/watcher/processing/fetch": {
-            "post": {
-                "description": "Load processing/unrecognized/done documents by names list",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "watcher"
-                ],
-                "summary": "Fetch processing documents",
-                "operationId": "fetch-documents",
-                "parameters": [
-                    {
-                        "description": "File names to fetch processing status",
-                        "name": "jsonQuery",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/httpserv.FetchDocumentsList"
-                        }
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "Ok",
-                        "schema": {
-                            "$ref": "#/definitions/watcher.ProcessingDocuments"
-                        }
-                    },
-                    "400": {
-                        "description": "Bad Request message",
-                        "schema": {
-                            "$ref": "#/definitions/httpserv.BadRequestForm"
-                        }
-                    },
-                    "503": {
-                        "description": "Server does not available",
-                        "schema": {
-                            "$ref": "#/definitions/httpserv.ServerErrorForm"
-                        }
-                    }
-                }
-            }
-        },
-        "/watcher/run": {
-            "get": {
-                "description": "Run all watchers",
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "watcher"
-                ],
-                "summary": "Run all watchers",
-                "operationId": "watcher-run",
-                "responses": {
-                    "200": {
-                        "description": "Ok",
-                        "schema": {
-                            "$ref": "#/definitions/httpserv.ResponseForm"
-                        }
-                    },
-                    "400": {
-                        "description": "Bad Request message",
-                        "schema": {
-                            "$ref": "#/definitions/httpserv.BadRequestForm"
-                        }
-                    },
-                    "503": {
-                        "description": "Server does not available",
-                        "schema": {
-                            "$ref": "#/definitions/httpserv.ServerErrorForm"
-                        }
-                    }
-                }
-            }
-        },
-        "/watcher/stop": {
-            "get": {
-                "description": "Stop all watchers",
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "watcher"
-                ],
-                "summary": "Stop all watchers",
-                "operationId": "watcher-stop",
-                "responses": {
-                    "200": {
-                        "description": "Ok",
-                        "schema": {
-                            "$ref": "#/definitions/httpserv.ResponseForm"
-                        }
-                    },
-                    "400": {
-                        "description": "Bad Request message",
-                        "schema": {
-                            "$ref": "#/definitions/httpserv.BadRequestForm"
-                        }
-                    },
-                    "503": {
-                        "description": "Server does not available",
-                        "schema": {
-                            "$ref": "#/definitions/httpserv.ServerErrorForm"
-                        }
-                    }
-                }
-            }
-        },
-        "/watcher/{bucket}/detach": {
+        "/watcher/{bucket}": {
             "delete": {
                 "description": "Attach new directory to watcher",
                 "consumes": [
@@ -235,19 +175,19 @@
                     "200": {
                         "description": "Ok",
                         "schema": {
-                            "$ref": "#/definitions/httpserv.ResponseForm"
+                            "$ref": "#/definitions/httpserver.ResponseForm"
                         }
                     },
                     "400": {
                         "description": "Bad Request message",
                         "schema": {
-                            "$ref": "#/definitions/httpserv.BadRequestForm"
+                            "$ref": "#/definitions/httpserver.BadRequestForm"
                         }
                     },
                     "503": {
                         "description": "Server does not available",
                         "schema": {
-                            "$ref": "#/definitions/httpserv.ServerErrorForm"
+                            "$ref": "#/definitions/httpserver.ServerErrorForm"
                         }
                     }
                 }
@@ -255,16 +195,66 @@
         }
     },
     "definitions": {
-        "httpserv.AttachDirectoryForm": {
+        "dto.TaskEvent": {
+            "type": "object",
+            "properties": {
+                "bucket": {
+                    "type": "string"
+                },
+                "created_at": {
+                    "type": "string"
+                },
+                "file_path": {
+                    "type": "string"
+                },
+                "file_size": {
+                    "type": "integer"
+                },
+                "id": {
+                    "type": "string"
+                },
+                "modified_at": {
+                    "type": "string"
+                },
+                "status": {
+                    "$ref": "#/definitions/dto.TaskStatus"
+                },
+                "status_text": {
+                    "type": "string"
+                }
+            }
+        },
+        "dto.TaskStatus": {
+            "type": "integer",
+            "enum": [
+                -1,
+                0,
+                1,
+                2,
+                3
+            ],
+            "x-enum-varnames": [
+                "Failed",
+                "Received",
+                "Pending",
+                "Processing",
+                "Successful"
+            ]
+        },
+        "httpserver.AttachDirectoryForm": {
             "type": "object",
             "properties": {
                 "bucket_name": {
                     "type": "string",
                     "example": "test-folder"
+                },
+                "directory": {
+                    "type": "string",
+                    "example": "/directory"
                 }
             }
         },
-        "httpserv.BadRequestForm": {
+        "httpserver.BadRequestForm": {
             "type": "object",
             "properties": {
                 "message": {
@@ -277,21 +267,29 @@
                 }
             }
         },
-        "httpserv.FetchDocumentsList": {
+        "httpserver.FetchAllDocuments": {
             "type": "object",
             "properties": {
-                "file_names": {
-                    "type": "array",
-                    "items": {
-                        "type": "string"
-                    },
-                    "example": [
-                        "test-file.docx"
-                    ]
+                "bucket_name": {
+                    "type": "string",
+                    "example": "test-folder"
                 }
             }
         },
-        "httpserv.ResponseForm": {
+        "httpserver.FetchDocumentsList": {
+            "type": "object",
+            "properties": {
+                "bucket_name": {
+                    "type": "string",
+                    "example": "test-folder"
+                },
+                "status": {
+                    "type": "string",
+                    "example": "Pending"
+                }
+            }
+        },
+        "httpserver.ResponseForm": {
             "type": "object",
             "properties": {
                 "message": {
@@ -304,7 +302,7 @@
                 }
             }
         },
-        "httpserv.ServerErrorForm": {
+        "httpserver.ServerErrorForm": {
             "type": "object",
             "properties": {
                 "message": {
@@ -316,29 +314,16 @@
                     "example": 503
                 }
             }
-        },
-        "watcher.ProcessingDocuments": {
-            "type": "object",
-            "properties": {
-                "done": {
-                    "type": "array",
-                    "items": {
-                        "type": "string"
-                    }
-                },
-                "processing": {
-                    "type": "array",
-                    "items": {
-                        "type": "string"
-                    }
-                },
-                "unrecognized": {
-                    "type": "array",
-                    "items": {
-                        "type": "string"
-                    }
-                }
-            }
         }
-    }
+    },
+    "tags": [
+        {
+            "description": "APIs to manage cloud watchers",
+            "name": "watcher"
+        },
+        {
+            "description": "APIs to get status tasks",
+            "name": "tasks"
+        }
+    ]
 }
